update summaryResponsive.css : iPhone SE corrected, overflow:hidden deleted, special view

--- a/styles/summaryResponsive.css
+++ b/styles/summaryResponsive.css
@@ -187,6 +187,6 @@
     .summary__container {
         margin-top: 100px;
         margin-bottom: 0;
-        overflow: hidden;
+        margin-left: -5px;
     }
 }
